# filtro_avancado_geral

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  streamlit_app.py
.devcontainer/: devcontainer.json
advanced_filter/: __init__.py  app.py  auditor.py  cli.py  config_loader.py  engine.py  excel_io.py  scorer.py  ui_streamlit.py
advanced_filter/core/: config_loader.py  decider.py  dsl.py  engine.py  matcher.py  preprocessor.py  resolver.py
advanced_filter/logs/: loggs.py
advanced_filter/ui/: RESULT_VIEW.py  controller.py  help_ui.py  profiles.py  result_view.py  state.py  views_profiles.py
advanced_filter/ui/profile_views/: common.py  create.py  edit_existing.py  edit_file.py
advanced_filter_context.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
exemplos/: Perfil_Vocab_Convertido.yaml  config_template.yaml  exemplo.csv
perfis/: Manutencao_Motor.yaml  apontamentos_manutencao_exemplo.xlsx  protecao_maos_ferramentas_manuais.yaml
